WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297114
error: call to non-‘constexpr’ function ‘double WebCore::DoubleSize::width() const’
https://bugs.webkit.org/show_bug.cgi?id=297114
Summary
error: call to non-‘constexpr’ function ‘double WebCore::DoubleSize::width() ...
Claudio Saavedra
Reported
2025-08-08 05:34:33 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2025-08-08 05:35:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49114
EWS
Comment 2
2025-08-08 07:00:00 PDT
Committed
298387@main
(c6f6bae295ab): <
https://commits.webkit.org/298387@main
> Reviewed commits have been landed. Closing PR #49114 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-08-08 07:00:14 PDT
<
rdar://problem/157844935
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug