error: call to non-‘constexpr’ function ‘double WebCore::DoubleSize::width() const’ https://bugs.webkit.org/show_bug.cgi?id=297114

Reviewed by Justin Michaud.

This fixes the build with older compilers, where DoublePoint constexpr
member functions can't build because DoubleSize getters are not constexpr.

* Source/WebCore/platform/graphics/DoubleSize.h:
(WebCore::DoubleSize::width const):
(WebCore::DoubleSize::height const):

Canonical link: https://commits.webkit.org/298387@main